# rust-pm

./: .gitignore  Cargo.toml  README.md  servers.json
downloads/: 7zip-23.01-r0.apk
src/: main.rs
src/download/: command.rs  servers.json
src/init/: command.rs
src/install/: command.rs
src/parser/: command.rs
