[package]
name = "rust-pm"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }  # For simple blocking requests
tokio = { version = "1.0", features = ["full"] }
scraper = "0.17"  # HTML parsing
regex = "1.0"     # For regex pattern matching
